--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -125,6 +125,7 @@
       {% else %}
       <p>No papers to display</p>
       {% endif %}
+      <a href="{% url 'sled_papers:paper-list' %}">See all papers</a>
     </div>
   </div>
 
