Some changes for deployment to the server.

--- a/registration/templates/registration/logout.html
+++ b/registration/templates/registration/logout.html
@@ -1,4 +1,5 @@
-{% extends 'lenses/header.html' %}
+{% extends 'master_header.html' %}
+{% load static %}
 {% load humanize %}
 
 {% block content %}
