--- a/registration/templates/registration/password_reset_confirm.html
+++ b/registration/templates/registration/password_reset_confirm.html
@@ -1,4 +1,5 @@
-{% extends 'lenses/header.html' %}
+{% extends 'master_header.html' %}
+{% load static %}
 {% load humanize %}
 
 {% block content %}
