--- a/registration/templates/registration/register.html
+++ b/registration/templates/registration/register.html
@@ -5,14 +5,9 @@
 {% load crispy_forms_tags %} -->
 
 {% block extrastyles %}
-<link href="{% static 'css/normalize.css' %}" rel="stylesheet" type="text/css">
-<link href="{% static 'css/webflow.css' %}" rel="stylesheet" type="text/css">
-<link href="{% static 'css/sled-8290ef.webflow.css' %}" rel="stylesheet" type="text/css">
 {% endblock extrastyles %}
 
 {% block extrascripts %}
-<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6197b5e05cae6979d73d5ab0" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="{% static 'login/js/webflow.js' %}" type="text/javascript"></script>
 {% endblock extrascripts %}
 
 
@@ -59,7 +54,9 @@
         {{ form.affiliation.errors }}
       </div>
 
-      <input type="submit" value="Register" data-wait="Please wait..." class="jb-submit-button w-button">
+      <div style="text-align:center">
+	<input type="submit" value="Register" data-wait="Please wait..." class="jb-submit-button-1 w-button">
+      </div>
     </form>
   </div>
 </div>
