--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -1,6 +1,7 @@
 {% extends 'master_header.html' %}
 {% load static %}
 
+
 {% block content %}
 {% include "modal_container.html" %}
 
@@ -10,16 +11,17 @@
   <div>
     <div class="jb-float-child-1">
       <h1 class="jb-heading-1">
-        {{ user.username }}
+	{{ user.username }}
       </h1>
     </div>
     <div class="jb-float-child-2">
       <img src="{% static 'images/JB_User_Icon.png' %}" loading="lazy" width="100" alt="" class="jb-image-2">
     </div>
 
+    
     <div>
       <h1 class="jb-heading-2">
-        My Details
+	My Details
       </h1>
       <div>
         <table>
@@ -75,42 +77,19 @@
 
   <br></br>
 
-  <table>
-    {% for imaging in imagings %}
-    <tr>
-      <td>{{ imaging.instrument.name }}</td>
-      <td>{{ imaging.band.name }}</td>
-      <td>{{ imaging.lens.name }}</td>
-    </tr>
-    {% empty %}
-    <tr>No Imaging data owned</tr>
-    {% endfor %}
-  </table>
-  <table>
-    {% for spectrum in spectra %}
-    <tr>
-      <td>{{ spectrum.instrument.name }}</td>
-      <td>{{ spectrum.lens.name }}</td>
-    </tr>
-    {% empty %}
-    <tr>No Spectrum data owned</tr>
-    {% endfor %}
-  </table>
-  <table>
-    {% for catalogue in catalogues %}
-    <tr>
-      <td>{{ catalogue.instrument.name }}</td>
-      <td>{{ catalogue.band.name }}</td>
-      <td>{{ catalogue.lens.name }}</td>
-    </tr>
-    {% empty %}
-    <tr>No Catalogue data owned</tr>
-    {% endfor %}
-  </table>
 
-  <div>
-    <h1 class="jb-heading-2">My Papers ({{N_papers}})</h1>
-    <div>
+
+ 
+  
+  <div class="c">
+    <input type="checkbox" id="faq-1">
+    <h1 class="jb-heading-2">
+      <label for="faq-1">
+	My Papers ({{N_papers}})
+      </label>
+    </h1>
+    <div class="p">
+      <br>
       {% if N_papers %}
       <table>
         <tbody>
@@ -123,16 +102,24 @@
         </tbody>
       </table>
       {% else %}
-      <p>No papers to display</p>
+      <p class="jb-paragraph-2">No papers to display</p>
       {% endif %}
       <a href="{% url 'sled_papers:paper-list' %}">See all papers</a>
+      <br>
+      <br>
     </div>
   </div>
 
   
-  <div>
-    <h1 class="jb-heading-2">My Groups ({{N_groups}})</h1>
-    <div>
+  <div class="c">
+    <input type="checkbox" id="faq-2">
+    <h1 class="jb-heading-2">
+      <label for="faq-2">
+	My Groups ({{N_groups}})
+      </label>
+    </h1>
+    <div class="p">
+      <br>
       {% if N_groups %}
       <table>
         <thead>
@@ -151,16 +138,24 @@
         </tbody>
       </table>
       {% else %}
-      <p>No groups to display</p>
+      <p class="jb-paragraph-2">No groups to display</p>
       {% endif %}
       <a href="{% url 'sled_groups:group-list' %}">See all groups</a>
+      <br>
+      <br>
     </div>
   </div>
 
 
-  <div>
-    <h1 class="jb-heading-2">My Queries ({{N_queries}})</h1>
-    <div>
+  <div class="c">
+    <input type="checkbox" id="faq-3">
+    <h1 class="jb-heading-2">
+      <label for="faq-3">
+	My Queries ({{N_queries}})
+      </label>
+    </h1>
+    <div class="p">
+      <br>
       {% if N_queries %}
       <table>
         <thead>
@@ -179,16 +174,24 @@
         </tbody>
       </table>
       {% else %}
-      <p>No queries to display</p>
+      <p class="jb-paragraph-2">No queries to display</p>
       {% endif %}
       <a href="{% url 'sled_queries:queries-list' %}">See all queries</a>
+      <br>
+      <br>
     </div>
   </div>
 
 
-  <div>
-    <h1 class="jb-heading-2">Pending Tasks ({{ N_tasks }})</h1>
-    <div>
+  <div class="c">
+    <input type="checkbox" id="faq-4">
+    <h1 class="jb-heading-2">
+      <label for="faq-4">
+	Pending Tasks ({{ N_tasks }})
+      </label>
+    </h1>
+    <div class="p">
+      <br>
       {% if N_tasks > 0 %}
       <table>
         <thead>
@@ -214,13 +217,21 @@
       <p class="jb-paragraph-2">No pending confirmation tasks</p>
       {% endif %}
       <a href="{% url 'sled_tasks:tasks-list' %}">See all tasks</a>
+      <br>
+      <br>
     </div>
   </div>
 
 
-  <div>
-    <h1 class="jb-heading-2">My Collections ({{ collections|length }}) </h1>
-    <div>
+  <div class="c">
+    <input type="checkbox" id="faq-5">
+    <h1 class="jb-heading-2">
+      <label for="faq-5">
+	My Collections ({{ collections|length }})
+      </label>
+    </h1>
+    <div class="p">
+      <br>
       {% if collections %}
       <table>
         <thead>
@@ -246,90 +257,150 @@
       <p class="jb-paragraph-2">No collections to display</p>
       {% endif %}
       <a href="{% url 'sled_collections:collections-list' %}">See all collections</a>
+      <br>
+      <br>
     </div>
   </div>
 
 
-  <div id="lenses">
-    <h1 class="jb-heading-2">My Lenses ({{ N_lenses }}) </h1>
+  <div id="lenses" class="c">
+    <input type="checkbox" id="faq-6">
+    <h1 class="jb-heading-2">
+      <label for="faq-6">
+	My Lenses ({{ N_lenses }})
+      </label>
+    </h1>
+    <div class="p">  
+      <div class="jb-pagination-table">
+	<table>
+          <tr>
+            {% if lenses.has_previous %}
+            <a href="{{ request.path }}?page={{ lenses.number|add:'-1' }}#lenses">Previous </a>
+            {% endif %}
 
-    <div class="jb-pagination-table">
+            {% if lenses.has_other_pages %}
+            {% for n in lenses_range %}
+            {% if n == lenses.number %}
+            <a href="{{ request.path }}?page={{ n }}#lenses" style="color: #BABCEF">{{ n }} </a>
+            {% else %}
+            <a href="{{ request.path }}?page={{ n }}#lenses">{{ n }} </a>
+            {% endif %}
+            {% endfor %}
+            {% endif %}
+
+            {% if lenses.has_next %}
+            <a href="{{ request.path }}?page={{ lenses.number|add:'1' }}#lenses">Next</a>
+            {% endif %}
+          </tr>
+          <tr>
+            | Showing {{ lenses.start_index }} - {{ lenses.end_index }}
+          </tr>
+	</table>
+      </div>
+
+      <div>
+	<form id="ids-form" method="POST">
+          {% csrf_token %}
+          {% include "lenses/lens_list_executive.html" with lenses=lenses %}
+	</form>
+      </div>
+
+
+      <div>
+	<!-- The button class 'sled-process-lenses' is required for functionality  -->
+
+	<button type="submit" id="update" class="jb-submit-button-1" form="ids-form" formaction="{% url 'lenses:lens-update' %}">
+	  <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+	  Update lenses
+	</button>
+	<button type="button" id="revoke-access" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-revoke-access' %}">
+	  <img src="{% static 'icons/person-dash-fill.svg' %}" alt="person minus">
+	  Revoke access
+	</button>
+	<button type="button" id="give-access" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-give-access' %}">
+	  <img src="{% static 'icons/person-plus-fill.svg' %}" alt="person plus">
+	  Give access
+	</button>
+	<button type="button" id="make-public" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-make-public' %}">
+	  <img src="{% static 'icons/people-fill.svg' %}" alt="people">
+	  Make public
+	</button>
+
+	<!-- The buttons below should be hidden as extra actions -->
+	<button type="button" id="make-private" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-make-private' %}">
+	  <img src="{% static 'icons/lock-fill.svg' %}" alt="lock">
+	  Make private
+	</button>
+	<button type="button" id="cede-ownership" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-cede-ownership' %}">
+	  <img src="{% static 'icons/forward-fill.svg' %}" alt="arrow">
+	  Cede ownership
+	</button>
+	<button type="button" id="delete-lenses" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-delete' %}">
+	  <img src="{% static 'icons/trash.svg' %}" alt="trash">
+	  Delete lenses
+	</button>
+      </div>
+      <br>
+      <br>
+    </div>
+  </div>
+
+
+
+  <div class="c">
+    <input type="checkbox" id="faq-7">
+    <h1 class="jb-heading-2">
+      <label for="faq-7">
+	My Data ({{N_queries}})
+      </label>
+    </h1>
+    <div class="p">
+      <br>
       <table>
-        <tr>
-          {% if lenses.has_previous %}
-          <a href="{{ request.path }}?page={{ lenses.number|add:'-1' }}#lenses">Previous </a>
-          {% endif %}
-
-          {% if lenses.has_other_pages %}
-          {% for n in lenses_range %}
-          {% if n == lenses.number %}
-          <a href="{{ request.path }}?page={{ n }}#lenses" style="color: #BABCEF">{{ n }} </a>
-          {% else %}
-          <a href="{{ request.path }}?page={{ n }}#lenses">{{ n }} </a>
-          {% endif %}
-          {% endfor %}
-          {% endif %}
-
-          {% if lenses.has_next %}
-          <a href="{{ request.path }}?page={{ lenses.number|add:'1' }}#lenses">Next</a>
-          {% endif %}
-        </tr>
-        <tr>
-          | Showing {{ lenses.start_index }} - {{ lenses.end_index }}
-        </tr>
+	{% for imaging in imagings %}
+	<tr>
+	  <td>{{ imaging.instrument.name }}</td>
+	  <td>{{ imaging.band.name }}</td>
+	  <td>{{ imaging.lens.name }}</td>
+	</tr>
+	{% empty %}
+	<tr>No Imaging data owned</tr>
+	{% endfor %}
       </table>
-    </div>
-
-    <div>
-      <form id="ids-form" method="POST">
-        {% csrf_token %}
-        {% include "lenses/lens_list_executive.html" with lenses=lenses %}
-      </form>
+      <table>
+	{% for spectrum in spectra %}
+	<tr>
+	  <td>{{ spectrum.instrument.name }}</td>
+	  <td>{{ spectrum.lens.name }}</td>
+	</tr>
+	{% empty %}
+	<tr>No Spectrum data owned</tr>
+	{% endfor %}
+      </table>
+      <table>
+	{% for catalogue in catalogues %}
+	<tr>
+	  <td>{{ catalogue.instrument.name }}</td>
+	  <td>{{ catalogue.band.name }}</td>
+	  <td>{{ catalogue.lens.name }}</td>
+	</tr>
+	{% empty %}
+	<tr>No Catalogue data owned</tr>
+	{% endfor %}
+      </table>
+      <br>
     </div>
   </div>
 
 
-  <div>
-    <!-- The button class 'sled-process-lenses' is required for functionality  -->
-
-    <button type="submit" id="update" class="jb-submit-button-1" form="ids-form" formaction="{% url 'lenses:lens-update' %}">
-      <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
-      Update lenses
-    </button>
-    <button type="button" id="revoke-access" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-revoke-access' %}">
-      <img src="{% static 'icons/person-dash-fill.svg' %}" alt="person minus">
-      Revoke access
-    </button>
-    <button type="button" id="give-access" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-give-access' %}">
-      <img src="{% static 'icons/person-plus-fill.svg' %}" alt="person plus">
-      Give access
-    </button>
-    <button type="button" id="make-public" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-make-public' %}">
-      <img src="{% static 'icons/people-fill.svg' %}" alt="people">
-      Make public
-    </button>
-
-    <!-- The buttons below should be hidden as extra actions -->
-    <button type="button" id="make-private" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-make-private' %}">
-      <img src="{% static 'icons/lock-fill.svg' %}" alt="lock">
-      Make private
-    </button>
-    <button type="button" id="cede-ownership" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-cede-ownership' %}">
-      <img src="{% static 'icons/forward-fill.svg' %}" alt="arrow">
-      Cede ownership
-    </button>
-    <button type="button" id="delete-lenses" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-delete' %}">
-      <img src="{% static 'icons/trash.svg' %}" alt="trash">
-      Delete lenses
-    </button>
-  </div>
-
+  
 </div>
 {% endblock content %}
 
 
 {% block extrastyles %}
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<link href="{% static 'sled_users/css/sled_users.css' %}" rel="stylesheet" />
 {% endblock extrastyles %}
 
 
@@ -338,40 +409,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 <script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $(".sled-process-lenses").click(function() {
-      // Construct get query string
-      var values = [];
-      $('#exe_summary input[type="checkbox"]:checked').each(function() {
-        values.push('ids=' + $(this).val());
-      });
-
-      if (values.length == 0) {
-        alert('You need to select at least one item!');
-      } else {
-        var get_str = '?' + values.join('&') + '&';
-
-        // Fetch only the first part of the URL (without any GET arguments)
-        var url = $(this).data('form-url').split('?');
-        var url_core = url[0];
-
-        // Trigger modal
-        var new_form_url = url_core + get_str;
-        $(this).modalFormTrigger({
-          formURL: new_form_url,
-          modalID: "#id-modal"
-        });
-      }
-    });
-
-    // Modals
-    $(".sled-modal").each(function() {
-      $(this).modalForm({
-        formURL: $(this).data("form-url"),
-        modalID: "#id-modal"
-      });
-    });
-  });
-</script>
+<script type="text/javascript" src="{% static 'sled_users/js/sled_users.js' %}"></script>
 {% endblock extrascripts %}
