--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -287,7 +287,7 @@
     border-top: 1px solid #ACACAC;
   }
 
-  .jb-table-no-lines table td {
+  .jb-table-no-lines td {
     padding-top: 12px;
     padding-bottom: 12px;
     border-top: 0px solid #ACACAC;
