--- a/lenses/templates/lenses/lens_resolve_duplicates.html
+++ b/lenses/templates/lenses/lens_resolve_duplicates.html
@@ -14,8 +14,8 @@
     {{ insert_formset.management_form }}
     {{ insert_formset.non_form_errors }}
 
-    <div>
-      <table class="jb-table-no-lines">
+    <div class="jb-table-no-lines">
+      <table>
         <thead>
           <tr>
             <th style="width: 50%">
