--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -82,7 +82,7 @@
  
   
   <div class="c">
-    <input type="checkbox" id="faq-1">
+    <input class="accordion-checkbox" type="checkbox" id="faq-1">
     <h1 class="jb-heading-2">
       <label for="faq-1">
 	My Papers ({{N_papers}})
@@ -112,7 +112,7 @@
 
   
   <div class="c">
-    <input type="checkbox" id="faq-2">
+    <input class="accordion-checkbox" type="checkbox" id="faq-2">
     <h1 class="jb-heading-2">
       <label for="faq-2">
 	My Groups ({{N_groups}})
@@ -148,7 +148,7 @@
 
 
   <div class="c">
-    <input type="checkbox" id="faq-3">
+    <input class="accordion-checkbox" type="checkbox" id="faq-3">
     <h1 class="jb-heading-2">
       <label for="faq-3">
 	My Queries ({{N_queries}})
@@ -184,7 +184,7 @@
 
 
   <div class="c">
-    <input type="checkbox" id="faq-4">
+    <input class="accordion-checkbox" type="checkbox" id="faq-4">
     <h1 class="jb-heading-2">
       <label for="faq-4">
 	Pending Tasks ({{ N_tasks }})
@@ -224,7 +224,7 @@
 
 
   <div class="c">
-    <input type="checkbox" id="faq-5">
+    <input class="accordion-checkbox" type="checkbox" id="faq-5">
     <h1 class="jb-heading-2">
       <label for="faq-5">
 	My Collections ({{ collections|length }})
@@ -264,7 +264,7 @@
 
 
   <div id="lenses" class="c">
-    <input type="checkbox" id="faq-6">
+    <input class="accordion-checkbox" type="checkbox" id="faq-6">
     <h1 class="jb-heading-2">
       <label for="faq-6">
 	My Lenses ({{ N_lenses }})
@@ -348,7 +348,7 @@
 
 
   <div class="c">
-    <input type="checkbox" id="faq-7">
+    <input class="accordion-checkbox" type="checkbox" id="faq-7">
     <h1 class="jb-heading-2">
       <label for="faq-7">
 	My Data ({{N_queries}})
